<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:background="@color/bg_color"
              android:orientation="vertical"
              android:paddingHorizontal="10dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/speed"
        android:textColor="@color/white"
        android:textSize="16dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView_speed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"></androidx.recyclerview.widget.RecyclerView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/word_size"
        android:layout_marginTop="10dp"
        android:textColor="@color/white"
        android:id="@+id/txt_size"
        android:textSize="16dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView_size"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"></androidx.recyclerview.widget.RecyclerView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/color"
        android:textColor="@color/white"
        android:textSize="16dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView_color"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"></androidx.recyclerview.widget.RecyclerView>

</LinearLayout>